perf: 优化toc style
遗留问题: 统一选中后显示工具，增加删除按钮

--- a/packages/editor/styles/_toc.scss
+++ b/packages/editor/styles/_toc.scss
@@ -24,20 +24,24 @@
       opacity: 0.5;
     }
 
-    &_3 {
+    &_2 {
       padding-left: 1rem;
     }
 
-    &_4 {
+    &_3 {
       padding-left: 2rem;
     }
 
-    &_5 {
+    &_4 {
       padding-left: 3rem;
     }
 
-    &_6 {
+    &_5 {
       padding-left: 4rem;
+    }
+
+    &_6 {
+      padding-left: 5rem;
     }
   }
 }
